Memperbaiki error endpoint delete mahasiswa pertemuan 5 cheva

--- a/pertemuan-05/code-program/.env
+++ b/pertemuan-05/code-program/.env
@@ -1,6 +1,5 @@
-port = 5000
-DB_NAME = 'mahasiswa_db'
-DB_USER= 'root'
-DB_PASS= 
-DB_HOST= localhost
-DB_DIALECT= mysql
+DB_NAME=db_mahasiswa
+DB_USER=root
+DB_PASS=
+DB_HOST=localhost
+DB_DIALECT=mysql
