--- a/pertemuan-09/nodeJS/mahasiswa-app/package.json
+++ b/pertemuan-09/nodeJS/mahasiswa-app/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "@prisma/client": "^6.10.1",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
